src/sass/modules/_example.scss
.row {
    width: 100%;
    margin: 0 auto;
}
.examples-header {
    .header-title {
        margin-bottom: -20px !important;
    }
}
.wrap-examples {
    background: url('/images/error/error-background.jpg');
    position: relative;
}
.section.examples-section {
    background: transparent;
    position: static;
    @media (min-width: $screen-sm) and (min-height: 2150px) {
        height: calc(100vh - 408px);
    }
}
.hide {
    display: none;
}
.show {
    display: initial;
}
.modal-open {
    .modal-backdrop.in {
        background-color: $ench-color;
        opacity: 0.7;
    }
}
.example-section {
    position: static;
    text-align: center;

    .modal-content {
        border: 0;
        box-shadow: none;
        border-radius: 0;
        background: transparent;
    }

    .close {
        font-weight: normal;
        text-shadow: none;
        opacity: 1;
        outline: 0;

        position: fixed;
        top: 50px;
        right: 50px;

        i {
            color: #fff;
            font-size: 19px;
        }

        &:hover > i {
            opacity: 0.7;
        }
    }

    [class*='col-'] {
        position: static;
    }
    a {
        text-decoration: none;
        display: inline-block;
        position: relative;
        cursor: pointer;
    }
    .zoom-in {
        color: #333;
        text-align: center;
        visibility: hidden;
        @include opacity(0);
        @include transition(.15s);
        .circle {
            display: block;
            margin: auto;
            width: 79px;
            height: 79px;
            position: absolute;
            top: 0;
            right: 0;
            bottom: 0;
            left: 0;
            @include font-size(22px);
            line-height: 3.6;
            border-radius: 50%;
            background-color: #fff;
        }
    }
    .example-image > img {
        @include transition(.15s);
        width: 100%;
    }
    .example-image:hover > img,
    .example-image:focus > img,
    .example-image:active > img {
        @include opacity(0.7);
    }
    .example-image:hover .zoom-in,
    .example-image:focus .zoom-in,
    .example-image:active .zoom-in {
        visibility: visible;
        @include opacity(1);
    }
    .person-data {
        padding-top: 66px;
        padding-bottom: 71px;
        .person-name {
            margin-top: 0;
            margin-bottom: 10px;
            @include font-size(24px);
        }
        .person-job-position {
            margin-bottom: 0 !important;
            @include font-size(16px, true);
            @include opacity(0.5);
        }
    }
}
.-section.-footer {
    @media (min-width: $screen-md) and (min-height: 1050px) {
        position: absolute;
        bottom: 0;
        width: 100%;
    }
}
@media(max-width: 768px) {
    .circle {
        width: 60px !important;
        height: 60px !important;
        @include font-size(18px, true);
        line-height: 3.4 !important;
    }
}

